<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/ds_margin_large"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvIconInformation"
        android:layout_width="@dimen/ds_margin_extra_large"
        android:layout_height="@dimen/ds_margin_extra_large"
        android:layout_marginTop="@dimen/ds_margin_large"
        android:background="@drawable/background_circle_textview"
        android:clickable="true"
        android:fontFamily="@font/mulish_regular"
        android:text="@string/calculator_i"
        android:textAlignment="center"
        android:textSize="@dimen/huge_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInformation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ds_margin_normal"
        android:layout_marginTop="@dimen/ds_margin_other_20"
        android:layout_marginEnd="@dimen/ds_margin_normal"
        android:fontFamily="@font/mulish_regular"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIconInformation"
        tools:text="@string/calculator_comisiona_exitosa" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profit_extra_large"
        android:layout_marginTop="@dimen/ds_margin_other_20"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/fest_text_size_14"
        android:fontFamily="@font/mulish_regular"
        android:text="@string/calculator_rango"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInformation" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_calculator_profit_text"
        android:layout_marginEnd="@dimen/margin_end_calculator_profit_text"
        android:fontFamily="@font/mulish_regular"
        android:text="@string/calculator_comision"
        android:textColor="@color/black"
        android:textSize="@dimen/fest_text_size_14"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView44"
        app:layout_constraintTop_toTopOf="@+id/textView44" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ds_margin_normal"
        android:layout_marginTop="@dimen/ds_margin_medium"
        android:layout_marginEnd="@dimen/ds_margin_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView44">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/tvInformationNoExitosa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ds_margin_normal"
        android:layout_marginTop="@dimen/ds_margin_12dp"
        android:textSize="@dimen/caption"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView2"
        tools:text="@string/calculator_comisiona_no_exitosa" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ds_margin_small"
        android:textSize="@dimen/caption"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvInformationNoExitosa"
        app:layout_constraintTop_toTopOf="@+id/tvInformationNoExitosa"
        tools:text="S/ 5" />

    <View
        android:id="@+id/vwLine"
        android:layout_width="0dp"
        android:layout_height="@dimen/ds_divider_horizontal_height"
        android:layout_marginStart="@dimen/ds_margin_normal"
        android:layout_marginTop="@dimen/ds_margin_other_20"
        android:layout_marginEnd="@dimen/ds_margin_normal"
        android:background="@color/gray_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInformationNoExitosa" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ds_margin_normal"
        android:layout_marginTop="@dimen/ds_margin_other_2"
        android:layout_marginEnd="@dimen/ds_margin_normal"
        android:fontFamily="@font/mulish_regular"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vwLine"
        tools:text="@string/calculator_mx_recuperacion_pedido" />

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ds_margin_normal"
        android:layout_marginTop="@dimen/ds_margin_extra_large"
        android:layout_marginEnd="@dimen/ds_margin_normal"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/mulish_regular"
        android:text="@string/calculator_action_label_ok"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>
